tests/baselines/reference/assignmentCompatWithObjectMembersAccessibility.errors.txt
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembersAccessibility.ts(31,5): error TS2322: Type 'E' is not assignable to type '{ foo: string; }':
  Private property 'foo' cannot be reimplemented.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembersAccessibility.ts(36,5): error TS2322: Type 'E' is not assignable to type 'Base':
  Private property 'foo' cannot be reimplemented.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembersAccessibility.ts(41,5): error TS2322: Type 'E' is not assignable to type 'I':
  Private property 'foo' cannot be reimplemented.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembersAccessibility.ts(46,5): error TS2322: Type 'E' is not assignable to type 'D':
  Private property 'foo' cannot be reimplemented.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembersAccessibility.ts(48,5): error TS2322: Type '{ foo: string; }' is not assignable to type 'E':
  Private property 'foo' cannot be reimplemented.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembersAccessibility.ts(49,5): error TS2322: Type 'Base' is not assignable to type 'E':
  Private property 'foo' cannot be reimplemented.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembersAccessibility.ts(50,5): error TS2322: Type 'I' is not assignable to type 'E':
  Private property 'foo' cannot be reimplemented.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembersAccessibility.ts(51,5): error TS2322: Type 'D' is not assignable to type 'E':
  Private property 'foo' cannot be reimplemented.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembersAccessibility.ts(81,5): error TS2322: Type 'Base' is not assignable to type '{ foo: string; }':
  Private property 'foo' cannot be reimplemented.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembersAccessibility.ts(82,5): error TS2322: Type 'I' is not assignable to type '{ foo: string; }':
  Private property 'foo' cannot be reimplemented.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembersAccessibility.ts(84,5): error TS2322: Type 'E' is not assignable to type '{ foo: string; }':
  Private property 'foo' cannot be reimplemented.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembersAccessibility.ts(86,5): error TS2322: Type '{ foo: string; }' is not assignable to type 'Base':
  Private property 'foo' cannot be reimplemented.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembersAccessibility.ts(88,5): error TS2322: Type 'D' is not assignable to type 'Base':
  Private property 'foo' cannot be reimplemented.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembersAccessibility.ts(89,5): error TS2322: Type 'E' is not assignable to type 'Base':
  Private property 'foo' cannot be reimplemented.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembersAccessibility.ts(92,5): error TS2322: Type '{ foo: string; }' is not assignable to type 'I':
  Private property 'foo' cannot be reimplemented.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembersAccessibility.ts(94,5): error TS2322: Type 'D' is not assignable to type 'I':
  Private property 'foo' cannot be reimplemented.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembersAccessibility.ts(95,5): error TS2322: Type 'E' is not assignable to type 'I':
  Private property 'foo' cannot be reimplemented.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembersAccessibility.ts(99,5): error TS2322: Type 'Base' is not assignable to type 'D':
  Private property 'foo' cannot be reimplemented.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembersAccessibility.ts(100,5): error TS2322: Type 'I' is not assignable to type 'D':
  Private property 'foo' cannot be reimplemented.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembersAccessibility.ts(101,5): error TS2322: Type 'E' is not assignable to type 'D':
  Private property 'foo' cannot be reimplemented.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembersAccessibility.ts(103,5): error TS2322: Type '{ foo: string; }' is not assignable to type 'E':
  Private property 'foo' cannot be reimplemented.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembersAccessibility.ts(104,5): error TS2322: Type 'Base' is not assignable to type 'E':
  Private property 'foo' cannot be reimplemented.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembersAccessibility.ts(105,5): error TS2322: Type 'I' is not assignable to type 'E':
  Private property 'foo' cannot be reimplemented.
tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembersAccessibility.ts(106,5): error TS2322: Type 'D' is not assignable to type 'E':
  Private property 'foo' cannot be reimplemented.


==== tests/cases/conformance/types/typeRelationships/assignmentCompatibility/assignmentCompatWithObjectMembersAccessibility.ts (24 errors) ====
    // members N and M of types S and T have the same name, same accessibility, same optionality, and N is assignable M
    
    module TargetIsPublic {
        // targets
        class Base {
            public foo: string;
        }
    
        interface I {
            foo: string;
        }
    
        var a: { foo: string; }
        var b: Base;
        var i: I;
    
        // sources
        class D {
            public foo: string;
        }
    
        class E {
            private foo: string;
        }
        var d: D;
        var e: E;
    
        a = b;
        a = i;
        a = d;
        a = e; // error
        ~
!!! error TS2322: Type 'E' is not assignable to type '{ foo: string; }':
!!! error TS2322:   Private property 'foo' cannot be reimplemented.
    
        b = a;
        b = i;
        b = d;
        b = e; // error
        ~
!!! error TS2322: Type 'E' is not assignable to type 'Base':
!!! error TS2322:   Private property 'foo' cannot be reimplemented.
    
        i = a;
        i = b;
        i = d;
        i = e; // error
        ~
!!! error TS2322: Type 'E' is not assignable to type 'I':
!!! error TS2322:   Private property 'foo' cannot be reimplemented.
    
        d = a;
        d = b;
        d = i;
        d = e; // error
        ~
!!! error TS2322: Type 'E' is not assignable to type 'D':
!!! error TS2322:   Private property 'foo' cannot be reimplemented.
    
        e = a; // errror
        ~
!!! error TS2322: Type '{ foo: string; }' is not assignable to type 'E':
!!! error TS2322:   Private property 'foo' cannot be reimplemented.
        e = b; // errror
        ~
!!! error TS2322: Type 'Base' is not assignable to type 'E':
!!! error TS2322:   Private property 'foo' cannot be reimplemented.
        e = i; // errror
        ~
!!! error TS2322: Type 'I' is not assignable to type 'E':
!!! error TS2322:   Private property 'foo' cannot be reimplemented.
        e = d; // errror
        ~
!!! error TS2322: Type 'D' is not assignable to type 'E':
!!! error TS2322:   Private property 'foo' cannot be reimplemented.
        e = e; 
    
    }
    
    module TargetIsPublic {
        // targets
        class Base {
            private foo: string;
        }
    
        interface I extends Base {
        }
    
        var a: { foo: string; }
        var b: Base;
        var i: I;
    
        // sources
        class D {
            public foo: string;
        }
    
        class E {
            private foo: string;
        }
    
        var d: D;
        var e: E;
    
        a = b; // error
        ~
!!! error TS2322: Type 'Base' is not assignable to type '{ foo: string; }':
!!! error TS2322:   Private property 'foo' cannot be reimplemented.
        a = i; // error
        ~
!!! error TS2322: Type 'I' is not assignable to type '{ foo: string; }':
!!! error TS2322:   Private property 'foo' cannot be reimplemented.
        a = d;
        a = e; // error
        ~
!!! error TS2322: Type 'E' is not assignable to type '{ foo: string; }':
!!! error TS2322:   Private property 'foo' cannot be reimplemented.
    
        b = a; // error
        ~
!!! error TS2322: Type '{ foo: string; }' is not assignable to type 'Base':
!!! error TS2322:   Private property 'foo' cannot be reimplemented.
        b = i;
        b = d; // error
        ~
!!! error TS2322: Type 'D' is not assignable to type 'Base':
!!! error TS2322:   Private property 'foo' cannot be reimplemented.
        b = e; // error
        ~
!!! error TS2322: Type 'E' is not assignable to type 'Base':
!!! error TS2322:   Private property 'foo' cannot be reimplemented.
        b = b;
        
        i = a; // error
        ~
!!! error TS2322: Type '{ foo: string; }' is not assignable to type 'I':
!!! error TS2322:   Private property 'foo' cannot be reimplemented.
        i = b;
        i = d; // error
        ~
!!! error TS2322: Type 'D' is not assignable to type 'I':
!!! error TS2322:   Private property 'foo' cannot be reimplemented.
        i = e; // error
        ~
!!! error TS2322: Type 'E' is not assignable to type 'I':
!!! error TS2322:   Private property 'foo' cannot be reimplemented.
        i = i;
    
        d = a;
        d = b; // error
        ~
!!! error TS2322: Type 'Base' is not assignable to type 'D':
!!! error TS2322:   Private property 'foo' cannot be reimplemented.
        d = i; // error
        ~
!!! error TS2322: Type 'I' is not assignable to type 'D':
!!! error TS2322:   Private property 'foo' cannot be reimplemented.
        d = e; // error
        ~
!!! error TS2322: Type 'E' is not assignable to type 'D':
!!! error TS2322:   Private property 'foo' cannot be reimplemented.
    
        e = a; // errror
        ~
!!! error TS2322: Type '{ foo: string; }' is not assignable to type 'E':
!!! error TS2322:   Private property 'foo' cannot be reimplemented.
        e = b; // errror
        ~
!!! error TS2322: Type 'Base' is not assignable to type 'E':
!!! error TS2322:   Private property 'foo' cannot be reimplemented.
        e = i; // errror
        ~
!!! error TS2322: Type 'I' is not assignable to type 'E':
!!! error TS2322:   Private property 'foo' cannot be reimplemented.
        e = d; // errror
        ~
!!! error TS2322: Type 'D' is not assignable to type 'E':
!!! error TS2322:   Private property 'foo' cannot be reimplemented.
        e = e;
    
    }